--- a/index.css
+++ b/index.css
@@ -9,22 +9,34 @@
 }
 
 .navbar{
-    /*display: inline-block; */
-    height: 50px;
+    height: 60px;
     overflow: hidden;
    background-color: white; 
-   padding: 11.2px, 24px;
+   /*padding: 11.2px 24px;*/
    border-bottom: 1px solid #eaecef;
 }
 
 .navbar a{
+    float: right;
+    text-align: center;
     text-decoration: none;
     padding: 30px 18px;
+   /* margin-bottom: 15px; */
+    font-size: 20.8px;
+    font-weight: 600;
+    color: #2c3e50;
 }
 
-right {
-    float: right;
+#direction{
+    float: left;
 }
+.navbar .search-container{
+    float: right;
+    margin-top: 30px;
+    padding: 6px auto;
+}
+
+
 
 .home{
     margin: 0px auto;
@@ -53,7 +65,6 @@ right {
     margin: 16px auto;
     max-width: 880px;
     color: #6a8bad;
-
 }
 
 .button{
@@ -64,7 +75,6 @@ right {
     border-bottom: none;
     font-size: 16px;
     color: #ffffff;
-
 }
 
 .button:hover{
@@ -120,8 +130,13 @@ hr{
     text-decoration: none;
     color: #c23582;
     font-weight: 500;
-    margin: 16px 4px;
-    padding: 15px 20px;
+    align-content: center;
+    align-items: center;
+    text-align: center;
+    justify-content: space-between;
+    padding-left: 100px;
+    padding-right: 130px;
+    margin-right: 15px;
 }
 
 .supporters{
@@ -149,7 +164,7 @@ hr{
 }
 
 .supporter a{
-    columns: #c23582;
+    color: #c23582;
     font-weight: 500;
     text-decoration: none;
     cursor: pointer;
